# django-clone

./: README.md  django-clone.md  pyproject.toml
23/12/31 rooms/: 1
bookings/: models.py
bookings/migrations/: 0001_initial.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_experience_category_alter_perk_details_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_amenity_category.py  0004_remove_amenity_category_room_category.py  0005_alter_room_amenities_alter_room_owner.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py
wishlists/: admin.py  models.py
wishlists/migrations/: 0001_initial.py
