[tool.poetry]
name = "django-clone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
